# type-safe-lint-python-

./: .gitignore  README.md  pyproject.toml
tests/: test_type_safe_lint_python.py
type_safe_lint_python/: __init__.py
